--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,8 @@
     // See http://go.microsoft.com/fwlink/?LinkId=827846
     // for the documentation about the extensions.json format
     "recommendations": [
+        "cschlosser.doxdocgen",
+        "formulahendry.code-runner",
         "platformio.platformio-ide"
     ]
 }
